@@ -557,15 +557,23 @@ class CTemplate extends CZBXAPI{
  * @param array $template_data['host']
  * @return string templateid
  */
-	public static function getObjects($template_data){
+	public static function getObjects($templateData){
 		$result = array();
 		$templateid = array();
 
+		$sql_where = '';
+		if(isset($templateData['host']))
+			$sql_where.= ' AND host='.zbx_dbstr($templateData['host']);
+			
+		if(isset($templateData['templateid']))
+			$sql_where.= ' AND hostid='.zbx_dbstr($templateData['templateid']);
+
+
 		$sql = 'SELECT hostid '.
 				' FROM hosts '.
-				' WHERE host='.zbx_dbstr($template_data['host']).
-					' AND status='.HOST_STATUS_TEMPLATE.
-					' AND '.DBin_node('hostid', false);
+				' WHERE status='.HOST_STATUS_TEMPLATE.
+					' AND '.DBin_node('hostid', false).
+					$sql_where;
 		$res = DBselect($sql);
 		while($template = DBfetch($res)){
 			$templateids[$template['hostid']] = $template['hostid'];
@@ -648,14 +656,13 @@ class CTemplate extends CZBXAPI{
 
 			foreach($templates as $tnum => $template){
 
-	/* 			$template_db_fields = array(
-					'host' => null,
+	 			$template_db_fields = array(
+					'host' => null
 				);
+
 				if(!check_db_fields($template_db_fields, $template)){
-					$result = false;
-					break;
+					throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Field "host" is mandatory');
 				}
-	 */
 
 				if(!preg_match('/^'.ZBX_PREG_HOST_FORMAT.'$/i', $template['host'])){
 					throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Incorrect characters used for Template name [ '.$template['host'].' ]');
@@ -677,8 +684,7 @@ class CTemplate extends CZBXAPI{
 				$templateid = get_dbid('hosts', 'hostid');
 				$templateids[] = $templateid;
 
-				$values = array($templateid, zbx_dbstr($template['host']), HOST_STATUS_TEMPLATE);
-				$sql = 'INSERT INTO hosts (hostid, host, status) VALUES ('. implode(', ', $values) .')';
+				$sql = 'INSERT INTO hosts (hostid, host, status) VALUES ('.$templateid.','.zbx_dbstr($template['host']).','.HOST_STATUS_TEMPLATE.')';
 				$result = DBexecute($sql);
 
 				if(!$result) throw new APIException(ZBX_API_ERROR_PARAMETERS, 'DBError');
@@ -818,6 +824,66 @@ class CTemplate extends CZBXAPI{
 		}
 	}
 
+
+/**
+ * Link Template to Hosts
+ *
+ * {@source}
+ * @access public
+ * @static
+ * @since 1.8
+ * @version 1
+ *
+ * @param array $data
+ * @param string $data['templates']
+ * @param string $data['hosts']
+ * @param string $data['groups']
+ * @param string $data['templates_link']
+ * @return boolean
+ */
+	public static function massAdd($data){
+		$transaction = false;
+
+		$templates = isset($data['templates']) ? zbx_toArray($data['templates']) : null;
+		$templateids = is_null($templates) ? array() : zbx_objectValues($templates, 'templateid');
+
+
+		$transaction = self::BeginTransaction(__METHOD__);
+
+		try{
+			if(isset($data['groups'])){
+				$options = array('groups' => $data['groups'], 'templates' => $templates);
+				$result = CHostGroup::massAdd($options);
+				if(!$result) throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Can\'t link groups');
+			}
+
+			if(isset($data['hosts'])){
+				$hostids = zbx_objectValues($data['hosts'], 'hostid');
+				self::link($templateids, $hostids);
+			}
+
+			if(isset($data['templates_link'])){
+				$templates_linkids = zbx_objectValues($data['templates_link'], 'templateid');
+				self::link($templates_linkids, $templateids);
+			}
+
+			if(isset($data['macros'])){
+				$options = array('templates' => zbx_toArray($data['templates']), 'macros' => $data['macros']);
+				$result = CUserMacro::massAdd($options);
+				if(!$result) throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Can\'t link macros');
+			}
+
+			$result = self::EndTransaction(true, __METHOD__);
+			return true;
+		}
+		catch(APIException $e){
+			if($transaction) self::EndTransaction(false, __METHOD__);
+			$error = $e->getErrors();
+			$error = reset($error);
+			self::setError(__METHOD__, $e->getCode(), $error);
+			return false;
+		}
+	}
 
 /**
  * Mass update hosts
@@ -1060,66 +1126,6 @@ class CTemplate extends CZBXAPI{
 	}
 
 /**
- * Link Template to Hosts
- *
- * {@source}
- * @access public
- * @static
- * @since 1.8
- * @version 1
- *
- * @param array $data
- * @param string $data['templates']
- * @param string $data['hosts']
- * @param string $data['groups']
- * @param string $data['templates_link']
- * @return boolean
- */
-	public static function massAdd($data){
-		$transaction = false;
-
-		$templates = isset($data['templates']) ? zbx_toArray($data['templates']) : null;
-		$templateids = is_null($templates) ? array() : zbx_objectValues($templates, 'templateid');
-
-
-		$transaction = self::BeginTransaction(__METHOD__);
-
-		try{
-			if(isset($data['groups'])){
-				$options = array('groups' => $data['groups'], 'templates' => $templates);
-				$result = CHostGroup::massAdd($options);
-				if(!$result) throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Can\'t link groups');
-			}
-
-			if(isset($data['hosts'])){
-				$hostsids = zbx_objectValues($data['hosts'], 'hostid');
-				self::link($templateids, $hostsids);
-			}
-
-			if(isset($data['templates_link'])){
-				$templates_linkids = zbx_objectValues($data['templates_link'], 'templateid');
-				self::link($templates_linkids, $templateids);
-			}
-
-			if(isset($data['macros'])){
-				$options = array('templates' => zbx_toArray($data['templates']), 'macros' => $data['macros']);
-				$result = CUserMacro::massAdd($options);
-				if(!$result) throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Can\'t link macros');
-			}
-
-			$result = self::EndTransaction(true, __METHOD__);
-			return true;
-		}
-		catch(APIException $e){
-			if($transaction) self::EndTransaction(false, __METHOD__);
-			$error = $e->getErrors();
-			$error = reset($error);
-			self::setError(__METHOD__, $e->getCode(), $error);
-			return false;
-		}
-	}
-
-	/**
  * remove Hosts to HostGroups. All Hosts are added to all HostGroups.
  *
  * {@source}
@@ -1257,7 +1263,7 @@ class CTemplate extends CZBXAPI{
 			self::BeginTransaction(__METHOD__);
 
 // CHECK TEMPLATE TRIGGERS DEPENDENCIES {{{
-			foreach($templateids as $templateid){
+			foreach($templateids as $tnum => $templateid){
 				$triggerids = array();
 				$db_triggers = get_triggers_by_hostid($templateid);
 				while($trigger = DBfetch($db_triggers)){
@@ -1270,26 +1276,36 @@ class CTemplate extends CZBXAPI{
 							' OR ('.DBcondition('td.triggerid_up',$triggerids).' AND f.triggerid=td.triggerid_down)) '.
 							' AND i.itemid=f.itemid '.
 							' AND h.hostid=i.hostid '.
-							' AND h.hostid<>'.$templateid.
+							' AND '.DBcondition('h.hostid', $templateids, true).
 							' AND h.status='.HOST_STATUS_TEMPLATE;
 
-				if($db_dephosts = DBfetch(DBselect($sql))){
+				if($db_dephost = DBfetch(DBselect($sql))){
+					$options = array(
+							'templateids' => $templateid,
+							'output'=> API_OUTPUT_EXTEND
+						);
+
+					$tmp_tpls = self::get($options);
+					$tmp_tpl = reset($tmp_tpls);
+
 					throw new APIException(ZBX_API_ERROR_PARAMETERS,
-						'Trigger in template [ '.$templateid.' ] has dependency with trigger in template [ '.$db_dephost['host'].' ]');
+						'Trigger in template [ '.$tmp_tpl['host'].' ] has dependency with trigger in template [ '.$db_dephost['host'].' ]');
 				}
 			}
 // }}} CHECK TEMPLATE TRIGGERS DEPENDENCIES
 
 
 			$linked = array();
-			$sql = 'SELECT hostid, templateid FROM hosts_templates WHERE '.DBcondition('hostid', $targetids).
-				' AND '.DBcondition('templateid', $templateids);
+			$sql = 'SELECT hostid, templateid '.
+					' FROM hosts_templates '.
+					' WHERE '.DBcondition('hostid', $targetids).
+						' AND '.DBcondition('templateid', $templateids);
 			$linked_db = DBselect($sql);
 			while($pair = DBfetch($linked_db)){
 				$linked[] = array($pair['hostid'] => $pair['templateid']);
 			}
 
-// add template linkages, if problems rollback later			
+// add template linkages, if problems rollback later
 			foreach($targetids as $targetid){
 				foreach($templateids as $tnum => $templateid){
 					foreach($linked as $lnum => $link){
@@ -1307,15 +1323,15 @@ class CTemplate extends CZBXAPI{
 // CHECK CIRCULAR LINKAGE {{{
 
 // get template linkage graph
+			$graph = array();
 			$sql = 'SELECT ht.hostid, ht.templateid'.
 				' FROM hosts_templates ht, hosts h'.
 				' WHERE ht.hostid=h.hostid'.
-					' AND h.status=3';
+					' AND h.status='.HOST_STATUS_TEMPLATE;
 			$db_graph = DBselect($sql);
-			$graph = array();
 			while($branch = DBfetch($db_graph)){
 				if(!isset($graph[$branch['hostid']])) $graph[$branch['hostid']] = array();
-				$graph[$branch['hostid']][] = $branch['templateid'];
+				$graph[$branch['hostid']][$branch['templateid']] = $branch['templateid'];
 			}
 
 // get points that have more than one parent templates			
@@ -1332,13 +1348,15 @@ class CTemplate extends CZBXAPI{
 				' GROUP BY ht.templateid';
 			$db_start_points = DBselect($sql);
 			while($start_point = DBfetch($db_start_points)){				
-				$start_points[$start_point['hostid']] = $start_point['hostid'];
-				$graph[$start_point['hostid']][] = $start_point['templateid'];
+				$start_points[] = $start_point['hostid'];
+				$graph[$start_point['hostid']][$start_point['templateid']] = $start_point['templateid'];
 			}
+
 // add to the start points also points which we add current templates
 			$start_points = array_merge($start_points, $targetids);
-			
-			foreach($start_points as $start){
+			$start_points = array_unique($start_points);
+
+			foreach($start_points as $spnum => $start){
 				$path = array();
 				if(!self::checkCircularLink($graph, $start, $path)){
 					throw new APIException(ZBX_API_ERROR_PARAMETERS, 'Circular link can not be created');
@@ -1361,13 +1379,15 @@ class CTemplate extends CZBXAPI{
 			}
 
 			self::EndTransaction(true, __METHOD__);
-
+			
+			return true;
 		}
 		catch(APIException $e){
 			self::EndTransaction(false, __METHOD__);
 			throw new APIException($e->getCode(), $e->getErrors());
+			
+			return false;
 		}
-
 	}
 
 	private static function checkCircularLink(&$graph, $current, &$path){
