@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1862] fixed host creation with link to templates with trigger dependencies (Aly)
  - [ZBX-1879] fixed unnecessary line brakes in IE7 (Vedmak)
  - [ZBX-1931] fixed process of sending active checks to ensure every active item is located in the server cache (Dmitry)
  - [ZBX-1935] remove incorrect item and fix minor typo in the default Windows template (Richlv)
